[package]
name = "raytracing-one-weekend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
glam = "0.24.1"
indicatif = "0.17.6"
itertools = "0.11.0"
rand = "0.8.5"
wgpu = "0.17.0"
